--- a/res/dbconfig.properties
+++ b/res/dbconfig.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://[ip]/[database]]?useUnicode=true&characterEncoding=utf8
-user = 
-password = 
+url = jdbc:mysql://127.0.0.1:3306/news?useUnicode=true&characterEncoding=utf8
+user = root
+password = root123456
