--- a/res/dbconfig.properties
+++ b/res/dbconfig.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://127.0.0.1:3306/news?useUnicode=true&characterEncoding=utf8
+url = jdbc:mysql://127.0.0.1:3306/news?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
 user = root
 password = root123456
